ADD: [api] #end; docs

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "queue",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "FIFO queue for node and browser",
-  "main": "./index.js",
+  "main": "lib/queue/index.js",
   "repository": {
     "type": "git",
     "url": "git@github.com:rusintez/queue.git"
