ADD: pass arguments to queue; ci badge; coverage;

--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
   "name": "queue",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "FIFO queue for node and browser",
   "main": "lib/queue/index.js",
+  "scripts": {
+    "test": "mocha -b -R spec spec",
+    "coverage": "mocha -b spec --require blanket --reporter html-cov > coverage.html;",
+    "precommit": "npm test && npm run coverage",
+    "prepush": "npm test"
+  },
+  "config": {
+    "blanket": {
+      "pattern": "lib/queue/"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:rusintez/queue.git"
@@ -12,5 +23,10 @@
     "fifo"
   ],
   "author": "Vladimir Popov",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "husky": "^0.6.0",
+    "mocha": "^1.21.4",
+    "blanket": "^1.1.6"
+  }
 }
